--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,25 +34,27 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
   intl: ^0.18.0
-  freezed: ^2.3.2
-  build_runner: ^2.3.3
   json_annotation: ^4.8.0
   freezed_annotation: ^2.2.0
   conditional_builder_null_safety: ^0.0.6
   flutter_riverpod: ^2.2.0
+  uuid: ^3.0.7
+  sizer: ^2.0.15
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  freezed: ^2.3.2
+  build_runner: ^2.3.3
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.1
   json_serializable: ^6.6.1
 
 # For information on the generic Dart part of this file, see the
